--- a/pages/electrical/ceiling-fan.html
+++ b/pages/electrical/ceiling-fan.html
@@ -33,6 +33,10 @@
             </div>
             <div class="guide-intro">
                 <p>From wobbling to noise issues, learn how to diagnose and fix common ceiling fan problems safely.</p>
+                <div class="safety-warning">
+                    <h3><i class="fas fa-exclamation-triangle"></i> Safety Warning</h3>
+                    <p>Working with electrical fixtures mounted at height poses multiple hazards. Always turn off power at the circuit breaker, use a sturdy ladder, and work with a helper when needed. If unsure about any step, consult a licensed electrician.</p>
+                </div>
                 <div class="warning-box">
                     <i class="fas fa-exclamation-triangle"></i>
                     <p>Always turn off power at the circuit breaker before working on ceiling fans!</p>
