--- a/pages/furniture/chair-repair.html
+++ b/pages/furniture/chair-repair.html
@@ -26,114 +26,100 @@
 
     <main class="repair-guide">
         <div class="guide-header">
-            <h1>How to Fix Common Chair Problems</h1>
-            <div class="difficulty-meter">
-                <span class="badge beginner">Beginner</span>
-                <span class="time-estimate"><i class="fas fa-clock"></i> 15-45 minutes</span>
-            </div>
+            <h1>Fix Common Chair Problems</h1>
             <div class="guide-intro">
                 <p>From wobbly chairs to loose legs, learn how to fix common chair problems and extend their lifespan.</p>
+                <div class="safety-warning">
+                    <h3><i class="fas fa-exclamation-triangle"></i> Safety Warning</h3>
+                    <p>Test chair stability thoroughly before use. Never attempt repairs while someone is sitting in the chair. Some chairs may be heavy - get help when needed. Use appropriate safety gear when working with tools or adhesives.</p>
+                </div>
             </div>
         </div>
 
-        <section class="common-problems">
-            <h2>Common Problems & Solutions</h2>
-            
-            <div class="problem-cards">
-                <div class="problem-card">
-                    <h3>Wobbly Chair</h3>
-                    <p>Chair rocks or feels unstable when sitting.</p>
-                    <div class="solution">
-                        <h4>Solution:</h4>
-                        <ol>
-                            <li>Identify uneven leg</li>
-                            <li>Check all joints</li>
-                            <li>Tighten loose screws</li>
-                            <li>Add furniture pads</li>
-                            <li>Level chair legs</li>
-                        </ol>
-                    </div>
-                </div>
-
-                <div class="problem-card">
-                    <h3>Loose Chair Leg</h3>
-                    <p>Chair leg is detached or loose from the seat.</p>
-                    <div class="solution">
-                        <h4>Solution:</h4>
-                        <ol>
-                            <li>Remove old glue</li>
-                            <li>Clean joint surfaces</li>
-                            <li>Apply wood glue</li>
-                            <li>Clamp firmly</li>
-                            <li>Allow to dry completely</li>
-                        </ol>
-                    </div>
-                </div>
-
-                <div class="problem-card">
-                    <h3>Squeaky Joints</h3>
-                    <p>Chair makes noise when used.</p>
-                    <div class="solution">
-                        <h4>Solution:</h4>
-                        <ol>
-                            <li>Locate noise source</li>
-                            <li>Tighten all fasteners</li>
-                            <li>Apply wood glue to joints</li>
-                            <li>Add lubricant if needed</li>
-                            <li>Test chair stability</li>
-                        </ol>
-                    </div>
-                </div>
+        <section class="tools-materials">
+            <h2><i class="fas fa-tools"></i> Tools & Materials</h2>
+            <div class="tools-list">
+                <ul>
+                    <li>Screwdriver set</li>
+                    <li>Wood glue</li>
+                    <li>Sandpaper</li>
+                    <li>Level</li>
+                    <li>Furniture shims</li>
+                    <li>Wood clamps</li>
+                    <li>Clean rags</li>
+                    <li>Safety gloves</li>
+                </ul>
             </div>
         </section>
 
-        <section class="tools-materials">
-            <div class="tools-needed">
-                <h3>What You'll Need</h3>
-                <div class="tools-grid">
-                    <div class="tool-item">
-                        <i class="fas fa-screwdriver"></i>
-                        <span>Screwdrivers</span>
-                    </div>
-                    <div class="tool-item">
-                        <i class="fas fa-hammer"></i>
-                        <span>Hammer</span>
-                    </div>
-                    <div class="tool-item">
-                        <i class="fas fa-tape"></i>
-                        <span>Wood glue</span>
-                    </div>
-                    <div class="tool-item">
-                        <i class="fas fa-compress-arrows-alt"></i>
-                        <span>Clamps</span>
-                    </div>
-                    <div class="tool-item">
-                        <i class="fas fa-ruler"></i>
-                        <span>Level</span>
-                    </div>
+        <section class="repair-steps">
+            <h2><i class="fas fa-list-ol"></i> Fix Steps</h2>
+            <div class="step-by-step">
+                <div class="step">
+                    <h3>Step 1: Assess the Problem</h3>
+                    <ul>
+                        <li>Check all joints and connections</li>
+                        <li>Identify loose or damaged parts</li>
+                        <li>Test chair stability</li>
+                        <li>Look for cracks or splits</li>
+                    </ul>
+                </div>
+
+                <div class="step">
+                    <h3>Step 2: Basic Repairs</h3>
+                    <ul>
+                        <li>Tighten all screws and bolts</li>
+                        <li>Add shims if needed</li>
+                        <li>Clean all surfaces</li>
+                        <li>Check leg leveling</li>
+                    </ul>
+                </div>
+
+                <div class="step">
+                    <h3>Step 3: Advanced Fixes</h3>
+                    <ul>
+                        <li>Repair loose joints</li>
+                        <li>Apply wood glue</li>
+                        <li>Clamp repairs</li>
+                        <li>Replace damaged parts</li>
+                    </ul>
+                </div>
+
+                <div class="step">
+                    <h3>Step 4: Finishing</h3>
+                    <ul>
+                        <li>Sand repaired areas</li>
+                        <li>Touch up finish</li>
+                        <li>Test all repairs</li>
+                        <li>Add protective pads</li>
+                    </ul>
                 </div>
             </div>
         </section>
 
         <section class="maintenance-tips">
-            <h2>Maintenance Tips</h2>
-            <div class="tips-container">
-                <div class="tip">
-                    <i class="fas fa-check-circle"></i>
-                    <p>Check joints monthly</p>
-                </div>
-                <div class="tip">
-                    <i class="fas fa-check-circle"></i>
-                    <p>Tighten screws regularly</p>
-                </div>
-                <div class="tip">
-                    <i class="fas fa-check-circle"></i>
-                    <p>Replace worn pads</p>
-                </div>
-                <div class="tip">
-                    <i class="fas fa-check-circle"></i>
-                    <p>Clean joints annually</p>
-                </div>
+            <h2><i class="fas fa-clipboard-check"></i> Maintenance Tips</h2>
+            <div class="tips-list">
+                <ul>
+                    <li>Check joints monthly</li>
+                    <li>Tighten hardware regularly</li>
+                    <li>Clean spills immediately</li>
+                    <li>Avoid dragging chairs</li>
+                    <li>Use chair pads</li>
+                    <li>Don't exceed weight limits</li>
+                    <li>Keep away from moisture</li>
+                    <li>Store properly when not in use</li>
+                </ul>
+            </div>
+        </section>
+
+        <section class="video-guide">
+            <h2><i class="fas fa-video"></i> Video Tutorial</h2>
+            <div class="video-container">
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/example" title="How to Fix Common Chair Problems" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            </div>
+            <div class="video-description">
+                <p>Watch our detailed video guide on fixing various chair issues and maintenance tips.</p>
             </div>
         </section>
     </main>
