--- a/pages/furniture/drawer-repair.html
+++ b/pages/furniture/drawer-repair.html
@@ -20,67 +20,57 @@
             </button>
             <nav class="main-nav">
                 <div class="category-dropdown">
-                    <button class="category-btn">
-                        <i class="fas fa-wrench"></i>
-                        Plumbing
+                    <button class="category-btn" title="Learn how to fix common plumbing issues like leaky faucets, clogged drains, and toilet problems"><i class="fas fa-wrench"></i>Plumbing
                         <i class="fas fa-chevron-down"></i>
                     </button>
                     <div class="dropdown-content">
-                        <a href="../plumbing/leaky-faucet.html">Leaky Faucet</a>
-                        <a href="../plumbing/clogged-drain.html">Clogged Drain</a>
-                        <a href="../plumbing/running-toilet.html">Running Toilet</a>
+                        <a href="../plumbing/leaky-faucet.html" title="Fix dripping faucets and replace washers">Leaky Faucet</a>
+                        <a href="../plumbing/clogged-drain.html" title="Clear blocked drains and prevent future clogs">Clogged Drain</a>
+                        <a href="../plumbing/running-toilet.html" title="Stop toilet from running and fix flush mechanisms">Running Toilet</a>
                     </div>
                 </div>
 
                 <div class="category-dropdown">
-                    <button class="category-btn">
-                        <i class="fas fa-plug"></i>
-                        Electrical
+                    <button class="category-btn" title="Learn how to safely handle electrical repairs around your home"><i class="fas fa-plug"></i>Electrical
                         <i class="fas fa-chevron-down"></i>
                     </button>
                     <div class="dropdown-content">
-                        <a href="../electrical/light-switch.html">Light Switch Issues</a>
-                        <a href="../electrical/outlet-repair.html">Outlet Not Working</a>
-                        <a href="../electrical/ceiling-fan.html">Ceiling Fan Problems</a>
+                        <a href="../electrical/light-switch.html" title="Repair faulty switches and fix flickering lights">Light Switch Issues</a>
+                        <a href="../electrical/outlet-repair.html" title="Fix dead outlets and replace damaged receptacles">Outlet Not Working</a>
+                        <a href="../electrical/ceiling-fan.html" title="Repair wobbly fans and fix speed controls">Ceiling Fan Problems</a>
                     </div>
                 </div>
 
                 <div class="category-dropdown">
-                    <button class="category-btn">
-                        <i class="fas fa-couch"></i>
-                        Furniture
+                    <button class="category-btn" title="Learn how to repair and maintain your furniture"><i class="fas fa-couch"></i>Furniture
                         <i class="fas fa-chevron-down"></i>
                     </button>
                     <div class="dropdown-content">
-                        <a href="wobbly-table.html">Wobbly Table/Chair</a>
-                        <a href="drawer-repair.html">Stuck Drawer</a>
-                        <a href="cabinet-hinge.html">Cabinet Hinge</a>
+                        <a href="../furniture/wobbly-table.html" title="Stabilize wobbly furniture and fix loose legs">Wobbly Table/Chair</a>
+                        <a href="../furniture/drawer-repair.html" title="Fix stuck drawers and repair drawer slides">Stuck Drawer</a>
+                        <a href="../furniture/cabinet-hinge.html" title="Repair loose hinges and align cabinet doors">Cabinet Hinge</a>
                     </div>
                 </div>
 
                 <div class="category-dropdown">
-                    <button class="category-btn">
-                        <i class="fas fa-door-open"></i>
-                        Doors & Windows
+                    <button class="category-btn" title="Learn how to fix common door and window problems"><i class="fas fa-door-open"></i>Doors & Windows
                         <i class="fas fa-chevron-down"></i>
                     </button>
                     <div class="dropdown-content">
-                        <a href="../doors/squeaky-hinge.html">Squeaky Hinge</a>
-                        <a href="../doors/stuck-window.html">Stuck Window</a>
-                        <a href="../doors/door-lock.html">Door Lock Issues</a>
+                        <a href="../doors/squeaky-hinge.html" title="Silence squeaky hinges and lubricate door parts">Squeaky Hinge</a>
+                        <a href="../doors/stuck-window.html" title="Unstick windows and fix window tracks">Stuck Window</a>
+                        <a href="../doors/door-lock.html" title="Repair faulty locks and fix alignment issues">Door Lock Issues</a>
                     </div>
                 </div>
 
                 <div class="category-dropdown">
-                    <button class="category-btn">
-                        <i class="fas fa-tools"></i>
-                        Appliances
+                    <button class="category-btn" title="Learn how to troubleshoot and fix household appliances"><i class="fas fa-tools"></i>Appliances
                         <i class="fas fa-chevron-down"></i>
                     </button>
                     <div class="dropdown-content">
-                        <a href="../appliances/washer-repair.html">Washer Problems</a>
-                        <a href="../appliances/dryer-repair.html">Dryer Not Working</a>
-                        <a href="../appliances/dishwasher.html">Dishwasher Issues</a>
+                        <a href="washer-repair.html" title="Fix common washing machine problems and maintenance">Washer Problems</a>
+                        <a href="dryer-repair.html" title="Repair dryer issues and improve performance">Dryer Not Working</a>
+                        <a href="dishwasher.html" title="Troubleshoot and fix dishwasher problems">Dishwasher Issues</a>
                     </div>
                 </div>
             </nav>
@@ -89,114 +79,90 @@
 
     <main class="repair-guide">
         <div class="guide-header">
-            <h1>How to Fix Stuck Drawers</h1>
-            <div class="difficulty-meter">
-                <span class="badge beginner">Beginner Friendly</span>
-                <span class="time-estimate"><i class="fas fa-clock"></i> 15-30 minutes</span>
-            </div>
+            <h1>Fix Stuck Drawers</h1>
             <div class="guide-intro">
-                <p>Stuck drawers are a common furniture problem that can be frustrating. Learn how to diagnose and fix drawer issues to restore smooth operation.</p>
+                <p>Learn how to repair and restore smooth operation to stuck, squeaky, or damaged drawers.</p>
+                <div class="safety-warning">
+                    <h3><i class="fas fa-exclamation-triangle"></i> Safety Warning</h3>
+                    <p>Remove drawers carefully to avoid injury. Some drawers may be heavy when full. Always support drawer weight properly when removing or reinstalling. Keep small hardware organized to prevent choking hazards.</p>
+                </div>
             </div>
         </div>
 
-        <section class="common-problems">
-            <h2>Common Problems & Solutions</h2>
-            
-            <div class="problem-cards">
-                <div class="problem-card">
-                    <h3>Drawer Track Issues</h3>
-                    <p>Debris or damage in drawer tracks can cause sticking and rough operation.</p>
-                    <div class="solution">
-                        <h4>Solution:</h4>
-                        <ol>
-                            <li>Remove drawer completely</li>
-                            <li>Clean tracks thoroughly</li>
-                            <li>Check for damage</li>
-                            <li>Apply lubricant</li>
-                            <li>Reinstall drawer</li>
-                        </ol>
-                    </div>
-                </div>
-
-                <div class="problem-card">
-                    <h3>Swollen Wood</h3>
-                    <p>Humidity can cause wooden drawers to expand and stick.</p>
-                    <div class="solution">
-                        <h4>Solution:</h4>
-                        <ol>
-                            <li>Remove drawer if possible</li>
-                            <li>Sand swollen areas</li>
-                            <li>Apply wax to sides</li>
-                            <li>Consider dehumidifier</li>
-                            <li>Test movement</li>
-                        </ol>
-                    </div>
-                </div>
-
-                <div class="problem-card">
-                    <h3>Broken Slides/Guides</h3>
-                    <p>Damaged or broken drawer slides can prevent proper operation.</p>
-                    <div class="solution">
-                        <h4>Solution:</h4>
-                        <ol>
-                            <li>Remove drawer</li>
-                            <li>Inspect slide mechanism</li>
-                            <li>Purchase replacement slides</li>
-                            <li>Install new hardware</li>
-                            <li>Align properly</li>
-                        </ol>
-                    </div>
-                </div>
+        <section class="tools-materials">
+            <h2><i class="fas fa-tools"></i> Tools & Materials</h2>
+            <div class="tools-list">
+                <ul>
+                    <li>Screwdriver set</li>
+                    <li>Wood glue</li>
+                    <li>Sandpaper (various grits)</li>
+                    <li>Drawer slides (if needed)</li>
+                    <li>Wax or lubricant</li>
+                    <li>Clean rags</li>
+                    <li>Wood cleaner</li>
+                    <li>Measuring tape</li>
+                </ul>
             </div>
         </section>
 
-        <section class="tools-materials">
-            <div class="tools-needed">
-                <h3>What You'll Need</h3>
-                <div class="tools-grid">
-                    <div class="tool-item">
-                        <i class="fas fa-screwdriver"></i>
-                        <span>Screwdriver set</span>
-                    </div>
-                    <div class="tool-item">
-                        <i class="fas fa-spray-can"></i>
-                        <span>Lubricant</span>
-                    </div>
-                    <div class="tool-item">
-                        <i class="fas fa-hand-sparkles"></i>
-                        <span>Cleaning supplies</span>
-                    </div>
-                    <div class="tool-item">
-                        <i class="fas fa-tools"></i>
-                        <span>Sandpaper</span>
-                    </div>
-                    <div class="tool-item">
-                        <i class="fas fa-ruler"></i>
-                        <span>Measuring tape</span>
-                    </div>
+        <section class="repair-steps">
+            <h2><i class="fas fa-list-ol"></i> Fix Steps</h2>
+            <div class="step-by-step">
+                <div class="step">
+                    <h3>Step 1: Assess the Problem</h3>
+                    <ul>
+                        <li>Empty drawer contents</li>
+                        <li>Check drawer movement</li>
+                        <li>Inspect slides and tracks</li>
+                        <li>Look for damage or wear</li>
+                    </ul>
+                </div>
+
+                <div class="step">
+                    <h3>Step 2: Clean and Inspect</h3>
+                    <ul>
+                        <li>Remove drawer completely</li>
+                        <li>Clean all surfaces</li>
+                        <li>Check for loose parts</li>
+                        <li>Identify wear points</li>
+                    </ul>
+                </div>
+
+                <div class="step">
+                    <h3>Step 3: Make Repairs</h3>
+                    <ul>
+                        <li>Tighten loose screws</li>
+                        <li>Replace damaged parts</li>
+                        <li>Sand rough spots</li>
+                        <li>Apply lubricant</li>
+                    </ul>
+                </div>
+
+                <div class="step">
+                    <h3>Step 4: Reassemble and Test</h3>
+                    <ul>
+                        <li>Reinstall drawer</li>
+                        <li>Check alignment</li>
+                        <li>Test movement</li>
+                        <li>Make adjustments</li>
+                    </ul>
                 </div>
             </div>
         </section>
 
         <section class="maintenance-tips">
-            <h2>Maintenance Tips</h2>
-            <div class="tips-container">
-                <div class="tip">
-                    <i class="fas fa-check-circle"></i>
-                    <p>Clean drawer tracks regularly to prevent buildup</p>
-                </div>
-                <div class="tip">
-                    <i class="fas fa-check-circle"></i>
-                    <p>Apply lubricant to slides every 6 months</p>
-                </div>
-                <div class="tip">
-                    <i class="fas fa-check-circle"></i>
-                    <p>Don't overload drawers beyond their capacity</p>
-                </div>
-                <div class="tip">
-                    <i class="fas fa-check-circle"></i>
-                    <p>Control room humidity to prevent wood swelling</p>
-                </div>
+            <h2><i class="fas fa-clipboard-check"></i> Maintenance Tips</h2>
+            <div class="tips-list">
+                <ul>
+                    <li>Clean tracks regularly</li>
+                    <li>Don't overload drawers</li>
+                    <li>Lubricate slides annually</li>
+                    <li>Check alignment monthly</li>
+                    <li>Address issues promptly</li>
+                    <li>Keep hardware tightened</li>
+                    <li>Use drawer organizers</li>
+                    <li>Avoid slamming drawers</li>
+                </ul>
             </div>
         </section>
     </main>
