--- a/pages/furniture/wobbly-table.html
+++ b/pages/furniture/wobbly-table.html
@@ -20,28 +20,24 @@
             </button>
             <nav class="main-nav">
                 <div class="category-dropdown">
-                    <button class="category-btn">
-                        <i class="fas fa-wrench"></i>
-                        Plumbing
+                    <button class="category-btn" title="Learn how to fix common plumbing issues like leaky faucets, clogged drains, and toilet problems"><i class="fas fa-wrench"></i>Plumbing
                         <i class="fas fa-chevron-down"></i>
                     </button>
                     <div class="dropdown-content">
-                        <a href="../plumbing/leaky-faucet.html">Leaky Faucet</a>
-                        <a href="../plumbing/clogged-drain.html">Clogged Drain</a>
-                        <a href="../plumbing/running-toilet.html">Running Toilet</a>
+                        <a href="../plumbing/leaky-faucet.html" title="Fix dripping faucets and replace washers">Leaky Faucet</a>
+                        <a href="../plumbing/clogged-drain.html" title="Clear blocked drains and prevent future clogs">Clogged Drain</a>
+                        <a href="../plumbing/running-toilet.html" title="Stop toilet from running and fix flush mechanisms">Running Toilet</a>
                     </div>
                 </div>
 
                 <div class="category-dropdown">
-                    <button class="category-btn">
-                        <i class="fas fa-plug"></i>
-                        Electrical
+                    <button class="category-btn" title="Learn how to safely handle electrical repairs around your home"><i class="fas fa-plug"></i>Electrical
                         <i class="fas fa-chevron-down"></i>
                     </button>
                     <div class="dropdown-content">
-                        <a href="../electrical/light-switch.html">Light Switch Issues</a>
-                        <a href="../electrical/outlet-repair.html">Outlet Not Working</a>
-                        <a href="../electrical/ceiling-fan.html">Ceiling Fan Problems</a>
+                        <a href="../electrical/light-switch.html" title="Repair faulty switches and fix flickering lights">Light Switch Issues</a>
+                        <a href="../electrical/outlet-repair.html" title="Fix dead outlets and replace damaged receptacles">Outlet Not Working</a>
+                        <a href="../electrical/ceiling-fan.html" title="Repair wobbly fans and fix speed controls">Ceiling Fan Problems</a>
                     </div>
                 </div>
 
@@ -53,34 +49,30 @@
                     </button>
                     <div class="dropdown-content">
                         <a href="wobbly-table.html" class="active">Wobbly Table/Chair</a>
-                        <a href="drawer-repair.html">Stuck Drawer</a>
-                        <a href="cabinet-hinge.html">Cabinet Hinge</a>
+                        <a href="../furniture/drawer-repair.html" title="Fix stuck drawers and repair drawer slides">Stuck Drawer</a>
+                        <a href="../furniture/cabinet-hinge.html" title="Repair loose hinges and align cabinet doors">Cabinet Hinge</a>
                     </div>
                 </div>
 
                 <div class="category-dropdown">
-                    <button class="category-btn">
-                        <i class="fas fa-door-open"></i>
-                        Doors & Windows
+                    <button class="category-btn" title="Learn how to fix common door and window problems"><i class="fas fa-door-open"></i>Doors & Windows
                         <i class="fas fa-chevron-down"></i>
                     </button>
                     <div class="dropdown-content">
-                        <a href="../doors/squeaky-hinge.html">Squeaky Hinge</a>
-                        <a href="../doors/stuck-window.html">Stuck Window</a>
-                        <a href="../doors/door-lock.html">Door Lock Issues</a>
+                        <a href="../doors/squeaky-hinge.html" title="Silence squeaky hinges and lubricate door parts">Squeaky Hinge</a>
+                        <a href="../doors/stuck-window.html" title="Unstick windows and fix window tracks">Stuck Window</a>
+                        <a href="../doors/door-lock.html" title="Repair faulty locks and fix alignment issues">Door Lock Issues</a>
                     </div>
                 </div>
 
                 <div class="category-dropdown">
-                    <button class="category-btn">
-                        <i class="fas fa-tools"></i>
-                        Appliances
+                    <button class="category-btn" title="Learn how to troubleshoot and fix household appliances"><i class="fas fa-tools"></i>Appliances
                         <i class="fas fa-chevron-down"></i>
                     </button>
                     <div class="dropdown-content">
-                        <a href="../appliances/washer-repair.html">Washer Problems</a>
-                        <a href="../appliances/dryer-repair.html">Dryer Not Working</a>
-                        <a href="../appliances/dishwasher.html">Dishwasher Issues</a>
+                        <a href="washer-repair.html" title="Fix common washing machine problems and maintenance">Washer Problems</a>
+                        <a href="dryer-repair.html" title="Repair dryer issues and improve performance">Dryer Not Working</a>
+                        <a href="dishwasher.html" title="Troubleshoot and fix dishwasher problems">Dishwasher Issues</a>
                     </div>
                 </div>
             </nav>
@@ -89,116 +81,100 @@
 
     <main class="repair-guide">
         <div class="guide-header">
-            <h1>Fix a Wobbly Table or Chair</h1>
-            <div class="difficulty-meter">
-                <span class="badge beginner">Beginner Friendly</span>
-                <span class="time-estimate"><i class="fas fa-clock"></i> 10-15 minutes</span>
-            </div>
+            <h1>Fix a Wobbly Table</h1>
             <div class="guide-intro">
-                <p>Learn how to quickly stabilize wobbly furniture with these simple fixes. Most wobbles can be fixed in minutes with common household items.</p>
+                <p>Learn how to stabilize and repair wobbly tables to ensure safe and stable use.</p>
+                <div class="safety-warning">
+                    <h3><i class="fas fa-exclamation-triangle"></i> Safety Warning</h3>
+                    <p>Ensure table is properly supported while working on it. Some tables may be heavy and require assistance to move or flip. Use appropriate safety equipment when cutting or sanding materials.</p>
+                </div>
             </div>
         </div>
 
-        <section class="quick-tips">
-            <h2>Before You Start</h2>
-            <div class="tips-list">
-                <div class="tip-item">
-                    <i class="fas fa-search"></i>
-                    <span>Check which leg is uneven</span>
+        <section class="tools-materials">
+            <h2><i class="fas fa-tools"></i> Tools & Materials</h2>
+            <div class="tools-list">
+                <ul>
+                    <li>Level</li>
+                    <li>Furniture shims</li>
+                    <li>Wood glue</li>
+                    <li>Screwdriver set</li>
+                    <li>Measuring tape</li>
+                    <li>Sandpaper</li>
+                    <li>Wood filler</li>
+                    <li>Clean rags</li>
+                </ul>
+            </div>
+        </section>
+
+        <section class="repair-steps">
+            <h2><i class="fas fa-list-ol"></i> Fix Steps</h2>
+            <div class="step-by-step">
+                <div class="step">
+                    <h3>Step 1: Assess the Problem</h3>
+                    <ul>
+                        <li>Place table on level surface</li>
+                        <li>Check each leg for stability</li>
+                        <li>Identify loose joints</li>
+                        <li>Measure any gaps</li>
+                    </ul>
                 </div>
-                <div class="tip-item">
-                    <i class="fas fa-broom"></i>
-                    <span>Clean the bottom of all legs</span>
+
+                <div class="step">
+                    <h3>Step 2: Basic Fixes</h3>
+                    <ul>
+                        <li>Tighten all screws</li>
+                        <li>Add shims where needed</li>
+                        <li>Level table surface</li>
+                        <li>Test stability</li>
+                    </ul>
                 </div>
-                <div class="tip-item">
-                    <i class="fas fa-level-up-alt"></i>
-                    <span>Place on flat surface to test</span>
+
+                <div class="step">
+                    <h3>Step 3: Advanced Repairs</h3>
+                    <ul>
+                        <li>Repair loose joints</li>
+                        <li>Replace damaged parts</li>
+                        <li>Reinforce weak areas</li>
+                        <li>Sand rough spots</li>
+                    </ul>
+                </div>
+
+                <div class="step">
+                    <h3>Step 4: Final Touches</h3>
+                    <ul>
+                        <li>Clean all surfaces</li>
+                        <li>Apply wood filler if needed</li>
+                        <li>Test all repairs</li>
+                        <li>Make final adjustments</li>
+                    </ul>
                 </div>
             </div>
         </section>
 
-        <section class="common-problems">
-            <h2>Common Problems & Solutions</h2>
-            
-            <div class="problem-cards">
-                <div class="problem-card">
-                    <div class="problem-header">
-                        <i class="fas fa-ruler"></i>
-                        <h3>Uneven Leg Length</h3>
-                    </div>
-                    <div class="problem-content">
-                        <div class="what-you-see">
-                            <h4>What's Wrong?</h4>
-                            <p>Table or chair rocks back and forth on flat surface</p>
-                        </div>
-                        <div class="quick-fix">
-                            <h4>How to Fix It:</h4>
-                            <ol>
-                                <li>Find the short leg by rocking furniture</li>
-                                <li>Clean bottom of all legs</li>
-                                <li>Add felt pads or rubber caps to short leg</li>
-                                <li>Test and add more pads if needed</li>
-                            </ol>
-                            <div class="alternative-tip">
-                                <i class="fas fa-lightbulb"></i>
-                                <p>No felt pads? Use folded cardboard or cork from wine bottle</p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="problem-card">
-                    <div class="problem-header">
-                        <i class="fas fa-screwdriver"></i>
-                        <h3>Loose Leg</h3>
-                    </div>
-                    <div class="problem-content">
-                        <div class="what-you-see">
-                            <h4>What's Wrong?</h4>
-                            <p>Leg moves or feels loose at connection point</p>
-                        </div>
-                        <div class="quick-fix">
-                            <h4>How to Fix It:</h4>
-                            <ol>
-                                <li>Turn furniture upside down carefully</li>
-                                <li>Look for loose screws or bolts</li>
-                                <li>Tighten all connecting parts</li>
-                                <li>Test stability when done</li>
-                            </ol>
-                            <div class="alternative-tip">
-                                <i class="fas fa-lightbulb"></i>
-                                <p>Screw still loose? Add wood glue to screw holes before re-tightening</p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
+        <section class="maintenance-tips">
+            <h2><i class="fas fa-clipboard-check"></i> Maintenance Tips</h2>
+            <div class="tips-list">
+                <ul>
+                    <li>Check stability monthly</li>
+                    <li>Keep floor surface clean</li>
+                    <li>Rotate table position regularly</li>
+                    <li>Avoid dragging table</li>
+                    <li>Use furniture pads</li>
+                    <li>Address issues promptly</li>
+                    <li>Keep hardware tightened</li>
+                    <li>Monitor floor levelness</li>
+                </ul>
             </div>
+        </section>
 
-            <div class="tools-needed">
-                <h3>What You'll Need</h3>
-                <div class="tools-grid">
-                    <div class="tool-item">
-                        <i class="fas fa-screwdriver"></i>
-                        <span>Screwdriver</span>
-                        <div class="alternative">
-                            <small>Or: Coin for large screws</small>
-                        </div>
-                    </div>
-                    <div class="tool-item">
-                        <i class="fas fa-square"></i>
-                        <span>Felt pads</span>
-                        <div class="alternative">
-                            <small>Or: Thick cardboard/cork</small>
-                        </div>
-                    </div>
-                    <div class="tool-item">
-                        <i class="fas fa-tape"></i>
-                        <span>Wood glue</span>
-                        <div class="alternative">
-                            <small>Or: Strong tape for temporary fix</small>
-                        </div>
-                    </div>
-                </div>
+        <section class="video-guide">
+            <h2><i class="fas fa-video"></i> Video Tutorial</h2>
+            <div class="video-container">
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/example" title="How to Fix a Wobbly Table" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            </div>
+            <div class="video-description">
+                <p>Watch our detailed video guide on fixing common table stability issues.</p>
             </div>
         </section>
     </main>
