--- a/pages/furniture/wood-care.html
+++ b/pages/furniture/wood-care.html
@@ -9,7 +9,13 @@
 </head>
 <body>
     <header class="header">
-        <!-- Navigation will be included here -->
+        <div class="header-content">
+            <div class="logo">
+                <a href="../../index.html">
+                    <img src="../../images/logo/fixbuddy-logo.svg" alt="FixBuddy" height="60">
+                </a>
+            </div>
+        </div>
     </header>
 
     <main class="maintenance-guide">
@@ -17,6 +23,10 @@
             <h1>Wood Furniture Care Guide</h1>
             <div class="guide-intro">
                 <p>Learn how to properly maintain and protect your wooden furniture to ensure its longevity and beauty.</p>
+                <div class="safety-warning">
+                    <h3><i class="fas fa-exclamation-triangle"></i> Safety Warning</h3>
+                    <p>Many wood care products contain chemicals that can be harmful if inhaled or absorbed through skin. Always work in a well-ventilated area, wear protective gloves, and keep products away from children and pets. Test products on a small hidden area first.</p>
+                </div>
             </div>
         </div>
 
