--- a/pages/plumbing/plumbing-maintenance.html
+++ b/pages/plumbing/plumbing-maintenance.html
@@ -9,117 +9,111 @@
 </head>
 <body>
     <header class="header">
-        <!-- Navigation will be included here -->
+        <div class="header-content">
+            <div class="logo">
+                <a href="../../index.html">
+                    <img src="../../images/logo/fixbuddy-logo.svg" alt="FixBuddy" height="60">
+                </a>
+            </div>
+        </div>
     </header>
 
-    <main class="maintenance-guide">
+    <main class="repair-guide">
         <div class="guide-header">
             <h1>Plumbing Maintenance Guide</h1>
             <div class="guide-intro">
                 <p>Regular maintenance of your home's plumbing system helps prevent issues and extends the life of your fixtures.</p>
+                <div class="safety-warning">
+                    <h3><i class="fas fa-exclamation-triangle"></i> Safety Warning</h3>
+                    <p>Always turn off water supply before working on plumbing. Be cautious with chemicals and tools. If you encounter serious issues like burst pipes or sewage backups, contact a licensed plumber immediately. Keep electrical devices away from water.</p>
+                </div>
             </div>
         </div>
 
+        <section class="tools-materials">
+            <h2><i class="fas fa-tools"></i> Tools & Materials</h2>
+            <div class="tools-list">
+                <ul>
+                    <li>Pipe wrench</li>
+                    <li>Plunger</li>
+                    <li>Drain snake</li>
+                    <li>Plumber's tape</li>
+                    <li>Pipe cleaning brushes</li>
+                    <li>Safety gloves</li>
+                    <li>Flashlight</li>
+                    <li>Bucket</li>
+                </ul>
+            </div>
+        </section>
+
         <section class="maintenance-steps">
-            <h2>Regular Maintenance Schedule</h2>
-            <div class="step-cards">
-                <div class="step-card">
+            <h2><i class="fas fa-list-ol"></i> Maintenance Schedule</h2>
+            <div class="step-by-step">
+                <div class="step">
                     <h3>Weekly Tasks</h3>
                     <ul>
-                        <li>Run water in unused sinks and showers</li>
-                        <li>Check for visible leaks under sinks</li>
+                        <li>Run water in unused fixtures</li>
+                        <li>Check for visible leaks</li>
                         <li>Listen for running toilets</li>
-                        <li>Clean shower heads and faucet aerators</li>
+                        <li>Clean shower heads</li>
                     </ul>
                 </div>
 
-                <div class="step-card">
+                <div class="step">
                     <h3>Monthly Tasks</h3>
                     <ul>
-                        <li>Test water pressure in all fixtures</li>
-                        <li>Clean all drain stoppers and strainers</li>
-                        <li>Check caulking around fixtures</li>
-                        <li>Inspect exposed pipes for condensation</li>
+                        <li>Test water pressure</li>
+                        <li>Clean drain strainers</li>
+                        <li>Check caulking</li>
+                        <li>Inspect exposed pipes</li>
                     </ul>
                 </div>
 
-                <div class="step-card">
-                    <h3>Seasonal Tasks</h3>
+                <div class="step">
+                    <h3>Quarterly Tasks</h3>
                     <ul>
-                        <li>Inspect all visible pipes for signs of wear</li>
-                        <li>Clean and maintain water heater</li>
-                        <li>Check outdoor spigots and hoses</li>
-                        <li>Insulate pipes in unheated areas</li>
+                        <li>Clean water heater</li>
+                        <li>Test shut-off valves</li>
+                        <li>Check for pipe corrosion</li>
+                        <li>Inspect outdoor plumbing</li>
+                    </ul>
+                </div>
+
+                <div class="step">
+                    <h3>Annual Tasks</h3>
+                    <ul>
+                        <li>Professional inspection</li>
+                        <li>Water heater flush</li>
+                        <li>Pipe insulation check</li>
+                        <li>Septic system service</li>
                     </ul>
                 </div>
             </div>
         </section>
 
         <section class="maintenance-tips">
-            <h2>Preventive Measures</h2>
-            <div class="tips-container">
-                <div class="tip">
-                    <h3>Water Pressure Management</h3>
-                    <p>Maintain optimal water pressure between 40-80 PSI to prevent strain on pipes and fixtures.</p>
-                </div>
-                <div class="tip">
-                    <h3>Drain Care</h3>
-                    <p>Use drain strainers in all sinks and tubs. Flush drains monthly with hot water.</p>
-                </div>
-                <div class="tip">
-                    <h3>Water Quality</h3>
-                    <p>Test water quality annually and maintain water treatment systems as recommended.</p>
-                </div>
-            </div>
-        </section>
-
-        <section class="seasonal-care">
-            <h2>Seasonal Maintenance</h2>
-            <div class="seasonal-tips">
-                <div class="season">
-                    <h3>Spring</h3>
-                    <ul>
-                        <li>Check for winter pipe damage</li>
-                        <li>Clean outdoor drainage systems</li>
-                        <li>Test sump pump operation</li>
-                    </ul>
-                </div>
-                <div class="season">
-                    <h3>Summer</h3>
-                    <ul>
-                        <li>Inspect irrigation systems</li>
-                        <li>Check outdoor faucet connections</li>
-                        <li>Monitor basement humidity</li>
-                    </ul>
-                </div>
-                <div class="season">
-                    <h3>Fall</h3>
-                    <ul>
-                        <li>Prepare pipes for winter</li>
-                        <li>Drain outdoor water features</li>
-                        <li>Check water heater settings</li>
-                    </ul>
-                </div>
-                <div class="season">
-                    <h3>Winter</h3>
-                    <ul>
-                        <li>Insulate exposed pipes</li>
-                        <li>Keep indoor temperature consistent</li>
-                        <li>Know location of main water valve</li>
-                    </ul>
-                </div>
-            </div>
-        </section>
-
-        <section class="water-conservation">
-            <h2>Water Conservation Tips</h2>
-            <div class="conservation-tips">
+            <h2><i class="fas fa-clipboard-check"></i> Prevention Tips</h2>
+            <div class="tips-list">
                 <ul>
-                    <li>Install low-flow fixtures</li>
-                    <li>Monitor water bills for unusual changes</li>
-                    <li>Fix drips and leaks promptly</li>
-                    <li>Consider water-efficient appliances</li>
+                    <li>Know main water shut-off location</li>
+                    <li>Never pour grease down drains</li>
+                    <li>Use drain strainers</li>
+                    <li>Fix leaks promptly</li>
+                    <li>Maintain proper water pressure</li>
+                    <li>Protect pipes from freezing</li>
+                    <li>Schedule regular inspections</li>
+                    <li>Keep records of maintenance</li>
                 </ul>
+            </div>
+        </section>
+
+        <section class="video-guide">
+            <h2><i class="fas fa-video"></i> Video Tutorial</h2>
+            <div class="video-container">
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/example" title="Home Plumbing Maintenance Guide" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            </div>
+            <div class="video-description">
+                <p>Watch our comprehensive guide on maintaining your home's plumbing system.</p>
             </div>
         </section>
     </main>
