--- a/pages/furniture/cabinet-hinge.html
+++ b/pages/furniture/cabinet-hinge.html
@@ -20,67 +20,57 @@
             </button>
             <nav class="main-nav">
                 <div class="category-dropdown">
-                    <button class="category-btn">
-                        <i class="fas fa-wrench"></i>
-                        Plumbing
+                    <button class="category-btn" title="Learn how to fix common plumbing issues like leaky faucets, clogged drains, and toilet problems"><i class="fas fa-wrench"></i>Plumbing
                         <i class="fas fa-chevron-down"></i>
                     </button>
                     <div class="dropdown-content">
-                        <a href="../plumbing/leaky-faucet.html">Leaky Faucet</a>
-                        <a href="../plumbing/clogged-drain.html">Clogged Drain</a>
-                        <a href="../plumbing/running-toilet.html">Running Toilet</a>
+                        <a href="../plumbing/leaky-faucet.html" title="Fix dripping faucets and replace washers">Leaky Faucet</a>
+                        <a href="../plumbing/clogged-drain.html" title="Clear blocked drains and prevent future clogs">Clogged Drain</a>
+                        <a href="../plumbing/running-toilet.html" title="Stop toilet from running and fix flush mechanisms">Running Toilet</a>
                     </div>
                 </div>
 
                 <div class="category-dropdown">
-                    <button class="category-btn">
-                        <i class="fas fa-plug"></i>
-                        Electrical
+                    <button class="category-btn" title="Learn how to safely handle electrical repairs around your home"><i class="fas fa-plug"></i>Electrical
                         <i class="fas fa-chevron-down"></i>
                     </button>
                     <div class="dropdown-content">
-                        <a href="../electrical/light-switch.html">Light Switch Issues</a>
-                        <a href="../electrical/outlet-repair.html">Outlet Not Working</a>
-                        <a href="../electrical/ceiling-fan.html">Ceiling Fan Problems</a>
+                        <a href="../electrical/light-switch.html" title="Repair faulty switches and fix flickering lights">Light Switch Issues</a>
+                        <a href="../electrical/outlet-repair.html" title="Fix dead outlets and replace damaged receptacles">Outlet Not Working</a>
+                        <a href="../electrical/ceiling-fan.html" title="Repair wobbly fans and fix speed controls">Ceiling Fan Problems</a>
                     </div>
                 </div>
 
                 <div class="category-dropdown">
-                    <button class="category-btn">
-                        <i class="fas fa-couch"></i>
-                        Furniture
+                    <button class="category-btn" title="Learn how to repair and maintain your furniture"><i class="fas fa-couch"></i>Furniture
                         <i class="fas fa-chevron-down"></i>
                     </button>
                     <div class="dropdown-content">
-                        <a href="wobbly-table.html">Wobbly Table/Chair</a>
-                        <a href="drawer-repair.html">Stuck Drawer</a>
-                        <a href="cabinet-hinge.html">Cabinet Hinge</a>
+                        <a href="../furniture/wobbly-table.html" title="Stabilize wobbly furniture and fix loose legs">Wobbly Table/Chair</a>
+                        <a href="../furniture/drawer-repair.html" title="Fix stuck drawers and repair drawer slides">Stuck Drawer</a>
+                        <a href="../furniture/cabinet-hinge.html" title="Repair loose hinges and align cabinet doors">Cabinet Hinge</a>
                     </div>
                 </div>
 
                 <div class="category-dropdown">
-                    <button class="category-btn">
-                        <i class="fas fa-door-open"></i>
-                        Doors & Windows
+                    <button class="category-btn" title="Learn how to fix common door and window problems"><i class="fas fa-door-open"></i>Doors & Windows
                         <i class="fas fa-chevron-down"></i>
                     </button>
                     <div class="dropdown-content">
-                        <a href="../doors/squeaky-hinge.html">Squeaky Hinge</a>
-                        <a href="../doors/stuck-window.html">Stuck Window</a>
-                        <a href="../doors/door-lock.html">Door Lock Issues</a>
+                        <a href="../doors/squeaky-hinge.html" title="Silence squeaky hinges and lubricate door parts">Squeaky Hinge</a>
+                        <a href="../doors/stuck-window.html" title="Unstick windows and fix window tracks">Stuck Window</a>
+                        <a href="../doors/door-lock.html" title="Repair faulty locks and fix alignment issues">Door Lock Issues</a>
                     </div>
                 </div>
 
                 <div class="category-dropdown">
-                    <button class="category-btn">
-                        <i class="fas fa-tools"></i>
-                        Appliances
+                    <button class="category-btn" title="Learn how to troubleshoot and fix household appliances"><i class="fas fa-tools"></i>Appliances
                         <i class="fas fa-chevron-down"></i>
                     </button>
                     <div class="dropdown-content">
-                        <a href="../appliances/washer-repair.html">Washer Problems</a>
-                        <a href="../appliances/dryer-repair.html">Dryer Not Working</a>
-                        <a href="../appliances/dishwasher.html">Dishwasher Issues</a>
+                        <a href="washer-repair.html" title="Fix common washing machine problems and maintenance">Washer Problems</a>
+                        <a href="dryer-repair.html" title="Repair dryer issues and improve performance">Dryer Not Working</a>
+                        <a href="dishwasher.html" title="Troubleshoot and fix dishwasher problems">Dishwasher Issues</a>
                     </div>
                 </div>
             </nav>
@@ -89,13 +79,13 @@
 
     <main class="repair-guide">
         <div class="guide-header">
-            <h1>How to Fix Cabinet Hinges</h1>
-            <div class="difficulty-meter">
-                <span class="badge beginner">Beginner Friendly</span>
-                <span class="time-estimate"><i class="fas fa-clock"></i> 15-30 minutes</span>
-            </div>
+            <h1>Fix Cabinet Hinges</h1>
             <div class="guide-intro">
-                <p>Cabinet hinges can become loose, squeaky, or misaligned over time. Learn how to fix common cabinet hinge problems and keep your cabinets working smoothly.</p>
+                <p>Learn how to repair and adjust cabinet hinges to ensure smooth door operation.</p>
+                <div class="safety-warning">
+                    <h3><i class="fas fa-exclamation-triangle"></i> Safety Warning</h3>
+                    <p>Be careful when working with cabinet doors as they can be heavy. Use proper support when removing doors and keep track of all hardware. Wear safety glasses when drilling or working with metal parts.</p>
+                </div>
             </div>
         </div>
 
